Remove build configuration in parent pom